[gd_scene load_steps=21 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Textures/Menu/fondo.png" type="Texture" id=2]
[ext_resource path="res://Textures/Menu/start_on.png" type="Texture" id=3]
[ext_resource path="res://Textures/Menu/prota.png" type="Texture" id=4]
[ext_resource path="res://Textures/Menu/start_off.png" type="Texture" id=5]
[ext_resource path="res://Textures/Menu/logo.png" type="Texture" id=6]
[ext_resource path="res://Textures/Menu/fantasma1.png" type="Texture" id=7]
[ext_resource path="res://Textures/Menu/fantasma3.png" type="Texture" id=8]
[ext_resource path="res://Textures/Menu/fantasma2.png" type="Texture" id=9]
[ext_resource path="res://Textures/Menu/textos.png" type="Texture" id=10]
[ext_resource path="res://Textures/Menu/Fonts/ARIALNB.TTF" type="DynamicFontData" id=11]
[ext_resource path="res://FadeIn.gd" type="Script" id=12]
[ext_resource path="res://Audio/Ost/PeekaBooh.ogg" type="AudioStream" id=13]
[ext_resource path="res://FadeOut.gd" type="Script" id=14]
[ext_resource path="res://Textures/Menu/Instrucciones_dificultad.png" type="Texture" id=15]
[ext_resource path="res://Music.gd" type="Script" id=16]
[ext_resource path="res://Audio/Sfx/StartButton.ogg" type="AudioStream" id=17]
[ext_resource path="res://Textures/Menu/inicio_0003_salir-copia-2-(combinado).png" type="Texture" id=18]
[ext_resource path="res://Textures/Menu/inicio_0001_salir-copia-2-(combinado)-copia-2.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 10
use_filter = true
font_data = ExtResource( 11 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fondo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personaje" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fantasma1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fantasma2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fantasma3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditos" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instrucciones" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Iniciar" type="TextureButton" parent="."]
anchor_left = 0.445
anchor_top = 0.795
anchor_right = 0.582
anchor_bottom = 0.878
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Iniciar"]
stream = ExtResource( 17 )
volume_db = -5.0

[node name="Salir" type="TextureButton" parent="."]
anchor_left = 0.8
anchor_top = 0.795
anchor_right = 0.8
anchor_bottom = 0.878
margin_left = 55.8
margin_top = 38.0
margin_right = 142.8
margin_bottom = 16.2
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Salir"]
stream = ExtResource( 17 )
volume_db = -5.0

[node name="EnemyNumber" type="HSlider" parent="."]
margin_left = 880.0
margin_top = 359.092
margin_right = 960.0
margin_bottom = 393.092
min_value = 1.0
max_value = 30.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="EnemyNumber"]
visible = false
margin_left = -148.063
margin_top = 7.94461
margin_right = -9.06317
margin_bottom = 26.9446
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.219608, 0.54902, 0.337255, 1 )
text = "Número de enemigos"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapHeight" type="HSlider" parent="."]
margin_left = 880.0
margin_top = 384.566
margin_right = 960.0
margin_bottom = 418.566
min_value = 3.0
max_value = 10.0
value = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MapHeight"]
visible = false
margin_left = -191.911
margin_top = 7.47012
margin_right = -5.91064
margin_bottom = 26.4701
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.219608, 0.54902, 0.337255, 1 )
text = "Tamaño del mapa (horizontal)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapWidth" type="HSlider" parent="."]
margin_left = 879.719
margin_top = 412.0
margin_right = 959.719
margin_bottom = 446.0
min_value = 3.0
max_value = 10.0
value = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MapWidth"]
visible = false
margin_left = -175.911
margin_top = 7.47012
margin_right = -7.91064
margin_bottom = 26.4701
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.219608, 0.54902, 0.337255, 1 )
text = "Tamaño del mapa (vertical)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraveAmount" type="HSlider" parent="."]
margin_left = 880.0
margin_top = 437.931
margin_right = 960.0
margin_bottom = 471.931
max_value = 1.0
step = 0.05
value = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="GraveAmount"]
visible = false
margin_left = -150.498
margin_top = 4.82449
margin_right = -11.498
margin_bottom = 23.8245
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.219608, 0.54902, 0.337255, 1 )
text = "Elementos del mapa"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FakeSoundsAmount" type="HSlider" parent="."]
margin_left = 880.0
margin_top = 464.756
margin_right = 960.0
margin_bottom = 498.756
max_value = 1.0
step = 0.1
value = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="FakeSoundsAmount"]
margin_left = -150.0
margin_top = 8.0
margin_right = -11.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.709804, 0.498039, 1 )
text = "Sonidos aleatorios"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 12 )

[node name="Tween" type="Tween" parent="FadeIn"]

[node name="FadeOut" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 14 )

[node name="Tween" type="Tween" parent="FadeOut"]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -80.0
autoplay = true
script = ExtResource( 16 )

[node name="ButtonOnline" type="Button" parent="."]
margin_left = 842.068
margin_top = 262.968
margin_right = 930.068
margin_bottom = 299.968
text = "ONLINE"

[node name="ButtonOnlineVolver" type="Button" parent="."]
visible = false
margin_left = 842.068
margin_top = 262.968
margin_right = 930.068
margin_bottom = 299.968
text = "VOLVER"

[node name="IniciarOnline" type="TextureButton" parent="."]
visible = false
anchor_left = 0.445
anchor_top = 0.795
anchor_right = 0.582
anchor_bottom = 0.878
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="IniciarOnline"]
stream = ExtResource( 17 )
volume_db = -5.0

[node name="Players" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -177.5
margin_right = 126.0
margin_bottom = 177.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Players"]
margin_left = 68.0
margin_top = 307.0
margin_right = 193.0
margin_bottom = 336.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="List" type="ItemList" parent="Players"]
margin_left = 25.0
margin_top = 37.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="PortForward" type="Label" parent="Players"]
margin_left = -300.07
margin_top = 282.369
margin_right = -48.07
margin_bottom = 336.369
custom_constants/line_spacing = 6
text = "If you want non-LAN clients to connect,
make sure the port 10567 in UDP
is forwarded on your router."
align = 1

[node name="FindPublicIP" type="LinkButton" parent="Players"]
margin_left = 393.568
margin_top = 298.04
margin_right = 566.568
margin_bottom = 312.04
text = "Find your public IP address"

[node name="Connect" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.5
margin_top = -83.5
margin_right = 138.5
margin_bottom = 83.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="NameLabel" type="Label" parent="Connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 66.0
margin_right = 57.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="Connect"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="Join" type="Button" parent="Connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="Connect"]
margin_left = 15.0
margin_top = 125.0
margin_right = 257.0
margin_bottom = 139.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
window_title = "¡Alerta!"
[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="pressed" from="Salir" to="." method="_on_Salir_pressed"]
[connection signal="fade_out_done" from="FadeOut" to="." method="_on_FadeOut_fade_out_done"]
[connection signal="tween_all_completed" from="FadeOut/Tween" to="FadeOut" method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="ButtonOnline" to="." method="_on_ButtonOnline_pressed"]
[connection signal="pressed" from="ButtonOnlineVolver" to="." method="_on_ButtonOnlineVolver_pressed"]
[connection signal="pressed" from="Players/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Players/FindPublicIP" to="." method="_on_FindPublicIP_pressed"]
[connection signal="pressed" from="Connect/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Connect/Join" to="." method="_on_Join_pressed"]
